tests/expected/task-1/err-funass-3.uc.out
---
test: run suites/task-1/err-funass-3.uc
---
suites/task-1/err-funass-3.uc:10:7: semantic error: cannot assign to a function
      f = g; // error: assignment to a function
        ^


exit: 1
